tests/sksl/errors/Ossfuzz31469.glsl
### Compilation failed:

error: 1: function 'n' can exit without returning a value
error: 1: function 'n' exits without returning a value
2 errors
